--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,4 +1,10 @@
 @import "variables";
+
 @import "layouts/home";
+@import "layouts/headers";
+@import "layouts/footers";
+@import "layouts/normalize";
+
+
 @import "bootstrap/scss/bootstrap";
 
