--- a/src/assets/styles/layouts/_normalize.scss
+++ b/src/assets/styles/layouts/_normalize.scss
@@ -49,6 +49,7 @@ li {
 html {
     font-size: 100%;
     scroll-behavior: smooth;
+    background-color: black;
 }
 
 /* Desactivamos estilos por defecto de las principales etiquetas de texto */
