--- a/src/assets/styles/layouts/_footers.scss
+++ b/src/assets/styles/layouts/_footers.scss
@@ -1,11 +1,14 @@
+// FOOTER
+
 .footer {
     padding: 50px;
-    background-color: #DEEF40;
+    background-color: $color-yellow;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     gap: 100px;
+    font-family: $font-family-2;
 }
 
 .uoc__img {
