--- a/src/assets/styles/layouts/_headers.scss
+++ b/src/assets/styles/layouts/_headers.scss
@@ -1,39 +1,43 @@
 // HEADERS
 
 .header {
-    background-color: black;
+    background-color: $color-black;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     position: fixed;
     top: 0px;
     width: 100%;
-}
 
-.header__menu {
-    padding: 30px;
-    display: flex;
-    flex-direction: row;
-    gap: 100px;
-    justify-content: center;
-    align-items: center;
-}
+    &__menu {
+        padding: 30px;
+        display: flex;
+        flex-direction: row;
+        gap: 100px;
+        justify-content: center;
+        align-items: center;
+    }
 
-.header__menu-link {
-    padding: 8px;
-    text-decoration: none;
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
-    letter-spacing: 10px;
-    font-weight: bold;
-}
+    &__menu-link {
+        padding: 8px;
+        text-decoration: none;
+        color: $color-white;
+        font-family: $font-family;
+        font-size: 20px;
+        letter-spacing: 10px;
+        font-weight: bold;
+    }
 
-.header__menu-link:hover {
-    background-color: white;
-    color: black;
-    border-radius: 50px;
-    padding: 8px;
+    &__menu-link:hover {
+        background-color: $color-white;
+        color: $color-black;
+        border-radius: 50px;
+        padding: 8px;
+    }
+
+    &__logo {
+        padding: 20px;
+    }
 }
 
 .logo__img {
@@ -41,6 +45,3 @@
     height: 150px;
 }
 
-.header__logo {
-    padding: 20px;
-}
