--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -1,38 +1,49 @@
+// HOME
+
+
 .index__container {
     margin-top: 190px;
     background-image: url(../images/hermes-rivera-newhL3aprGk-unsplash.jpg);
     background-size: cover;
     background-attachment: fixed;
-    height: 40vw;
+    height: 70vh;
     display: grid;
     place-items: center;
 
 }
 
 .container__h1 {
-    color: white;
+    color: $color-white;
     letter-spacing: 13px;
     font-size: 100px;
     font-weight: bold;
+    font-family: $font-family;
 }
 
 .container__h2 {
-    color: white;
+    color: $color-white;
     letter-spacing: 6px;
     font-size: 50px;
+    font-family: $font-family;
+    font-weight: bold;
 }
 
 .container__btn {
-    font-size: 30px;
-    padding: 10px;
-    background-color: #DEEF40;
-    color: black;
-    width: 200px;
-    height: 80px;
-    border-radius: 5px;
+    @include btn;
+
+    &:hover {
+        background-color: $color-black;
+    }
 }
-.container__btn:hover {
-    background-color: black;
-    color:  #DEEF40;
+
+
+.btn__a {
+    text-decoration: none;
+    color: $color-black;
+
+    &:hover {
+        color:  $color-yellow;
+    }
+    
 }
 
