--- a/src/assets/styles/layouts/_headers.scss
+++ b/src/assets/styles/layouts/_headers.scss
@@ -8,6 +8,7 @@
     position: fixed;
     top: 0px;
     width: 100%;
+    z-index: 200;
 
     &__menu {
         padding: 30px;
@@ -19,7 +20,7 @@
     }
 
     &__menu-link {
-        padding: 8px;
+        padding: 10px;
         text-decoration: none;
         color: $color-white;
         font-family: $font-family;
@@ -29,10 +30,10 @@
     }
 
     &__menu-link:hover {
-        background-color: $color-white;
+        background-color: $color-yellow;
         color: $color-black;
         border-radius: 50px;
-        padding: 8px;
+        padding: 10px;
     }
 
     &__logo {
