--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -2,6 +2,7 @@
 @import "mixins";
 
 @import "layouts/home";
+@import "layouts/members";
 @import "layouts/headers";
 @import "layouts/footers";
 @import "layouts/normalize";
