--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -9,3 +9,23 @@
     height: 80px;
     border-radius: 5px;
 }
+
+@mixin h1 {
+    color: $color-white;
+    letter-spacing: 13px;
+    font-size: 100px;
+    font-weight: bold;
+    font-family: $font-family;
+    text-align: center;
+}
+
+@mixin p {
+    color: $color-white;
+    max-width: 1000px;
+    margin: auto;
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 20px;
+    letter-spacing: 3px;
+    line-height: 40px;
+}
