--- a/src/assets/styles/layouts/_headers.scss
+++ b/src/assets/styles/layouts/_headers.scss
@@ -20,7 +20,7 @@
     }
 
     &__menu-link {
-        padding: 10px;
+        padding: 15px;
         text-decoration: none;
         color: $color-white;
         font-family: $font-family;
@@ -33,12 +33,19 @@
         background-color: $color-yellow;
         color: $color-black;
         border-radius: 50px;
-        padding: 10px;
+        padding: 15px;
     }
 
     &__logo {
         padding: 20px;
     }
+}
+
+.header__menu-link--selected {
+    background-color: $color-yellow;
+    color: $color-black;
+    border-radius: 50px;
+    padding: 10px;
 }
 
 .logo__img {
