--- a/src/assets/styles/layouts/_members.scss
+++ b/src/assets/styles/layouts/_members.scss
@@ -2,7 +2,7 @@
 
 .main__members {
     margin-top: 190px;
-    background-color: #11192F;
+    background-color: $color-blue;
     color: $color-white;
 }
 
