--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -4,6 +4,7 @@
 @import "layouts/home";
 @import "layouts/blog";
 @import "layouts/members";
+@import "layouts/sponsor";
 @import "layouts/headers";
 @import "layouts/footers";
 @import "layouts/normalize";
