--- a/src/assets/styles/layouts/_headers.scss
+++ b/src/assets/styles/layouts/_headers.scss
@@ -1,14 +1,18 @@
+body{
+    container-type: inline-size; 
+}
+
+
+
 // HEADERS
 
 .header {
+    container-type: inline-size;
     background-color: $color-black;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    position: fixed;
-    top: 0px;
     width: 100%;
-    z-index: 200;
 
     &__menu {
         padding: 30px;
@@ -52,4 +56,34 @@
     width: 150px;
     height: 150px;
 }
+
+@container (max-width: 1200px) {
+    .header {
+
+    }
+
+    .header__menu {
+        gap: 10px
+    }
+}
+
+@container (max-width: 930px) {
+    .header {
+        flex-direction: column;
+    }
+
+    .header__logo {
+        text-align: center;
+    }
+}
+
+@container (max-width: 700px) {
+    .header__menu {
+        flex-direction: column;
+    }
+
+    
+}
+
+
 
