--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -10,7 +10,8 @@
     padding: 50px;
 
     @media(max-width: 425px) {
-        padding: 10px;
+        padding: 2px;
+        padding-bottom: 20px;
     }
 
 }
@@ -19,7 +20,8 @@
     @include h1;
 
     @media(max-width: 660px) {
-        font-size: 50px;
+        font-size: 40px;
+        padding: 20px;
     }
 }
 
