--- a/src/assets/styles/layouts/_members.scss
+++ b/src/assets/styles/layouts/_members.scss
@@ -1,7 +1,6 @@
 // MAIN MEMBERS
 
 .main__members {
-    margin-top: 190px;
     background-color: $color-blue;
     color: $color-white;
 }
@@ -29,6 +28,16 @@
 .card__img {
     width: 600px;
     height: 600px;
+
+    @media (max-width: 680px) {
+        width: 400px;
+        height: 400px;
+    }
+
+    @media (max-width: 450px) {
+        width: 100%;
+        height: 250px;
+    }
 }
 
 .card__figcap {
