--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -10,9 +10,14 @@
 $font-family: 'Playfair';
 $font-family-2: Arial;
 
-// Color
+// Color 
 $color-black: black;
 $color-yellow:  #DEEF40;
 $color-white: white;
 $color-blue: #11192F;
+
+// COLOR HWB
+$color-black-hwb: hwb(0 0% 100%);
+$color-white-hwb:hwb(0 100% 0%);
+
 
