--- a/src/assets/styles/layouts/_sponsor.scss
+++ b/src/assets/styles/layouts/_sponsor.scss
@@ -5,7 +5,7 @@
     background-color: $color-blue;
     padding-top: 50px;
     padding-bottom: 50px;
-    color: $color-white;
+    color: $color-white-hwb;
 }
 
 .contact__p {
@@ -23,7 +23,7 @@
 }
 
 .contact__h2 {
-    color: $color-white;
+    color: $color-white-hwb;
     letter-spacing: 13px;
     font-size: 60px;
     font-weight: bold;
