--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -108,6 +108,11 @@
         display: grid;
         grid-template-columns: 1fr 1fr; 
         gap: 20px; 
+
+        @media (max-width: 695px) {
+            display: flex;
+            flex-direction: column;
+        }
     }
 }
 
